# statistical-nmr

./: .gitignore  LICENSE  README.md  metabolite_script.py  pyproject.toml  smr.yml
data/: Anti-difluorobutane.csv  DFG_TwoSpinStochastic.m  Difluoropropane.csv  anti_difluorobutane.py  difluoropropane.py
data/data_w_spin_names/: matrix1.csv  matrix10.csv  matrix11.csv  matrix12.csv  matrix13.csv  matrix14.csv  matrix15.csv  matrix16.csv  matrix17.csv  matrix18.csv  matrix19.csv  matrix2.csv  matrix20.csv  matrix21.csv  matrix22.csv  matrix23.csv  matrix24.csv  matrix25.csv  matrix26.csv  matrix27.csv  matrix28.csv  matrix29.csv  matrix3.csv  matrix30.csv  matrix31.csv  matrix32.csv  matrix33.csv  matrix34.csv  matrix35.csv  matrix36.csv  matrix37.csv  matrix38.csv  matrix39.csv  matrix4.csv  matrix40.csv  matrix41.csv  matrix42.csv  matrix43.csv  matrix44.csv  matrix45.csv  (+29 more)
data/metabolite_4spin/exp_spectra/: exp_matrix10_499.84.csv  exp_matrix12_499.84.csv  exp_matrix13_499.84.csv  exp_matrix14_499.84.csv  exp_matrix16_499.84.csv  exp_matrix17_499.84.csv  exp_matrix21_400.13.csv  exp_matrix24_499.84.csv  exp_matrix28_400.13.csv  exp_matrix2_499.84.csv  (+29 more)
hl/: sensorsim.py  test_examples.ipynb
notebooks/: OptimizingScars_Example.ipynb  qfi_NL.ipynb  qfi_NM_RDM.ipynb  qfi_clean.ipynb  qfi_rough.ipynb  test_examples.ipynb
src/: BuildLattices.py  sensorsim.py  sensorsim_old.py  spinED.py
tests/: fitting.py  fitting_test.py  playground.py  simulation.py  spectra.py  spectra_jax.py  spectra_torch.py  test_volterra.py  volterra.py  volterra_fitting.py  volterra_nn.py
tests/utils/: test_io.py
(+122 files in other folders)
